--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,15 @@ html{
     align-items: center;
 }
 
+.add-on-checkbox{
+    width: 20px;
+    height: 20px;
+}
+
+.add-on-checkbox:checked{
+    accent-color: #473DFE;
+}
+
 .navbar{
     width: 100%;
     height: 30vh;
